# SimProject

./: README.md  main.py  pyproject.toml
sim_project/: gpt_translate.py  tts.py
