[build-system]
requires = ["setuptools>=62.0.0", "wheel"]

[tool.setuptools.packages]
find = {}

[project]
name = "simlish_translate"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.4.1",
    "librosa==0.10.1",
    "noisereduce==3.0.2",
    "numpy==1.26.4",
    "openai==1.14.3",
    "scipy==1.12.0",
    "soundfile==0.12.1",
    "TTS==0.22.0"

]
